manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traction-sample
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traction-sample
  template:
    metadata:
      labels:
        app: traction-sample
    spec:
      containers:
        - name: traction-sample
          image: tractionsample.azurecr.io/tractionsample:10
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
