manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traction-sample
spec:
  type: ClusterIP
  selector:
    app: traction-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
