manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traction-sample
spec:
  tls:
  - hosts:
      - traction-sample.abrodersen.com
    secretName: traction-sample-cert
  rules:
  - host: traction-sample.abrodersen.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traction-sample
          servicePort: 80
